--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -18,51 +18,55 @@
   width: 100%;
   height: 54px;
   margin: 0 auto;
-  background: red;
   display: flex;
   justify-content: space-between;
   line-height: 54px;
+}
+
+.headWrapper .hwLeft {
+  padding-left: 18px;
+
+  >ul {
+    li {
+      float: left;
+      margin-left: 12px;
+    }
+
+    .clearfix();
+  }
+}
+
+.headWrapper .hwCenter {
+  height: 54px;
+  width: 54px;
+
+  >img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.headWrapper .hwRight {
+  display: flex;
+  padding-right: 18px;
 
   >div {
-    &:first-child {
-      >div {
-        display: inline-block;
+    &:nth-child(1) {
+      height: 44px;
+      width: 44px;
 
-        &:first-child {
-          float: left;
-          width: 160px;
-        }
-
-        &:last-child {
-
-          >ul {
-            >li {
-              float: left;
-              margin-left: 10px;
-            }
-
-            .clearfix();
-
-          }
-        }
-
-        .clearfix();
-
+      >img {
+        height: 100%;
+        width: 100%;
+        border-radius: 22px;
+        border: 1px solid #f1f1f1;
+        vertical-align: middle;
       }
     }
 
-    &:last-child {
-      >div {
-        display: inline-block;
-
-        &:first-child {
-          width: 200px;
-
-        }
-
-        &:last-child {
-          columns: #000000;
-        }
+    &:nth-child(2) {
+      a {
+        margin: 0 12px;
       }
     }
   }
